# yt-knowledge-pipeline

./: .gitignore  README.md  pyproject.toml
docs/adr/: 0001-use-python.md
scripts/: get_transcript.py
src/yt_pipeline/: transcript.py
